--- a/tp3/index.html
+++ b/tp3/index.html
@@ -21,7 +21,7 @@ canvas {
 </head>
 <body>
 
-<script type="module" src="MyGame.js"></script>
+<script type="module" src="main.js"></script>
 
 </body>
 </html>
